# tastee

./: .gitignore  B6L8_cenarios.ipynb  IEEE118_cenarios.ipynb  LICENSE  README.md  TEST.PY  TRAB_8_E_PROVA.ipynb  analise_dados.ipynb  debug.ipynb  debug.py  debug_model.txt  environment.yml  main.ipynb  meus_resultados.json  pyproject.toml  resultados_otimizacao.json
arquivos/: B3.m  B6L8.m  B7L9.m  IEEE118_novo.m  IEEE119.m  Ieee14.m  OPF_linprog.m  inpdat.m
results_b6l8/: cenario_0.json  cenario_1.json  cenario_10.json  cenario_11.json  cenario_13.json  cenario_16.json  cenario_17.json  cenario_18.json  cenario_21.json  cenario_28.json  cenario_29.json  cenario_3.json  cenario_31.json  cenario_32.json  cenario_34.json  cenario_35.json  cenario_38.json  cenario_4.json  cenario_41.json  cenario_43.json  cenario_44.json  cenario_46.json  cenario_48.json  cenario_49.json  cenario_50.json  cenario_52.json  cenario_54.json  cenario_56.json  cenario_57.json  cenario_58.json  cenario_59.json  cenario_61.json  cenario_62.json  cenario_64.json  cenario_65.json  cenario_66.json  cenario_67.json  cenario_68.json  cenario_70.json  cenario_72.json  (+19 more)
results_ieee118/: cenario_13.json  cenario_14.json  cenario_15.json  cenario_18.json  cenario_19.json  cenario_20.json  cenario_21.json  cenario_22.json  cenario_28.json  cenario_30.json  cenario_33.json  cenario_35.json  cenario_37.json  cenario_4.json  cenario_40.json  cenario_41.json  cenario_42.json  cenario_45.json  cenario_46.json  cenario_48.json  cenario_49.json  cenario_50.json  cenario_53.json  cenario_54.json  cenario_57.json  cenario_58.json  cenario_60.json  cenario_62.json  cenario_63.json  cenario_64.json  cenario_65.json  cenario_69.json  cenario_7.json  cenario_70.json  cenario_71.json  cenario_72.json  cenario_75.json  cenario_76.json  cenario_77.json  cenario_78.json  (+14 more)
src/: main.py
src/data_models/: temporal_structure.py  time_series.py
src/machine_learning/: __init__.py  architectures.py  data_gen.py  dataset.py  neural_proxy.py  predictor.py  processing.py  trainer.py
src/opf_linear/: opf_loss.py
src/power/: __init__.py
src/power_flow/: AC_PF.py  DC_PF.py
src/utils/: load_scen.py
systems/: b3.py  b6l8.py  b7l9.py  ieee14.py
trabalho_aula_3/: B6L8_cenarios.ipynb  analise_dados.ipynb
trabalho_aula_3/results_b6l8/: cenario_14.json  cenario_2.json  cenario_25.json  cenario_39.json  cenario_45.json  cenario_69.json  cenario_71.json  cenario_74.json  cenario_78.json  cenario_84.json  cenario_94.json  energetico_cenario_0.json
trabalho_aula_3/results_ieee118/: cenario_0.json  cenario_10.json  cenario_16.json  cenario_17.json  cenario_23.json  cenario_31.json  cenario_43.json  (+7 more)
trabalho_aula_4/: analise_dados.ipynb  trab.ipynb  trab_part1.ipynb  trab_part2.ipynb
(+2221 files in other folders)
