[project]
name = "tastee"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Halfeld Limp",email = "halfeld.limp.gabriel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pulp (>=3.3.0,<4.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "duckdb (>=1.4.1,<2.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "pyomo (>=6.9.5,<7.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "joblib (>=1.5.3,<2.0.0)"
]

[tool.poetry]
packages = [{include = "optimal_power_flow", from = "src"}, 
            {include = "power", from = "src"}, 
            {include = "metaheuristic", from = "src"},
            {include = "power_flow", from = "src"},
            {include = "trabalhos_transmissao"},
            {include = "machine_learning", from = "src"},
            {include = "data_models", from = "src"}]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=6.30.1,<7.0.0)"
]
